dont create Boolean objects